--- a/src/main.scss
+++ b/src/main.scss
@@ -1,73 +1,46 @@
-html,
-body {
-    font-family: "Open Sans", sans-serif;
-    font-size: 14px;
-    background: #F0F2F4;
-}
-
 .hero-body {
-    background-position: center;
-    background-size: cover;
-    background-repeat: no-repeat;
-    height: 500px;
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  height: 50vh;
 }
 
 .articles {
-    margin: 5rem 0;
-    margin-top: -200px;
+  margin: 5rem 0;
+  margin-top: -30vh;
 }
 
 .articles .content p {
-    line-height: 1.9;
-    margin: 15px 0;
-}
-
-.author-image {
-    position: absolute;
-    top: -30px;
-    left: 50%;
-    width: 60px;
-    height: 60px;
-    margin-left: -30px;
-    border: 3px solid #ccc;
-    border-radius: 50%;
-}
-
-.media-center {
-    display: block;
-    margin-bottom: 1rem;
+  line-height: 1.9;
+  margin: 15px 0;
 }
 
 .media-content {
-    margin-top: 3rem;
+  margin-top: 3rem;
 }
 
 .article,
 .promo-block {
-    margin-top: 6rem;
-}
-
-div.column.is-8:first-child {
-    padding-top: 0;
-    margin-top: 0;
+  margin-top: 6rem;
+  height: 50vh;
 }
 
 .article-title {
-    font-size: 2rem;
-    font-weight: lighter;
-    line-height: 2;
+  font-size: 2rem;
+  font-weight: lighter;
+  line-height: 2;
 }
 
 .article-subtitle {
-    color: #909AA0;
-    margin-bottom: 3rem;
+  color: #909aa0;
+  margin-bottom: 3rem;
 }
 
 .article-body {
-    line-height: 1.4;
-    margin: 0 6rem;
+  line-height: 1.4;
+  margin: 0 6rem;
 }
 
 .promo-block .container {
-    margin: 1rem 5rem;
+  margin: 1rem 5rem;
 }
