--- a/src/main.scss
+++ b/src/main.scss
@@ -2,12 +2,12 @@
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
-  height: 50vh;
+  height: 350px;
 }
 
 .articles {
   margin: 5rem 0;
-  margin-top: -30vh;
+  margin-top: -200px;
 }
 
 .articles .content p {
@@ -22,7 +22,7 @@
 .article,
 .promo-block {
   margin-top: 6rem;
-  height: 50vh;
+  height: 500px;
 }
 
 .article-title {
