--- a/src/main.scss
+++ b/src/main.scss
@@ -44,3 +44,8 @@
 .promo-block .container {
   margin: 1rem 5rem;
 }
+.has-image-centered {
+  margin: 2rem;
+  margin-left: auto;
+  margin-right: auto;
+}
